
ChangeLog
---------

Version 2021.01.00-a2 - ??-???-2021:
 - Changed "mmbasic.nanorc" to make behaviour more like the CMM2 editor:
    - added 'set constantshow' so the cursor position display is always visible.
    - added 'set zap' so that [Delete] and [Backspace] erase all the selected
      text instead of just a single character.
    - either of these can be commented out with # if you prefer.

Version 2021.01.00-a1 - 23-Sep-2021:
 - First alpha version.