@@ -1,10 +1,9 @@
 #include "../common/version.h"
 
 void cmd_system(void) {
-    int rc;
-
-    rc = system(getCstring(cmdline));
-    if (rc != 0) {
-        error("Command could not be run");
+    int result = system(getCstring(cmdline));
+    if (result != 0) {
+        MMerrno = result;
+        error("System command failed, exit code [%]", result);
     }
 }
